added new details to drumkit

--- a/index.html
+++ b/index.html
@@ -1,15 +1,65 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="./main.css" rel="stylesheet">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link href="./main.css" rel="stylesheet" />
     <title>JS Drum kit</title>
-</head>
-<body>
+    <link
+      href="https://fonts.googleapis.com/css2?family=Monoton&display=swap"
+      rel="stylesheet"
+    />
+  </head>
+  <body>
+    <h1>🥁 My Drum Kit 🥁</h1>
 
+    <div class="drum-pad" id="boom">
+      <div class="drum-pad-inner"></div>
 
-    
+      <h3>Boom</h3>
+    </div>
+
+    <div class="drum-pad" id="clap">
+      <div class="drum-pad-inner"></div>
+      <h3>Clap</h3>
+    </div>
+
+    <div class="drum-pad" id="hihat">
+      <div class="drum-pad-inner"></div>
+      <h3>Hihat</h3>
+    </div>
+    <div class="drum-pad" id="kick">
+      <div class="drum-pad-inner"></div>
+      <h3>Kick</h3>
+    </div>
+    <div class="drum-pad" id="openhat">
+      <div class="drum-pad-inner"></div>
+      <h3>Openhat</h3>
+    </div>
+    <div class="drum-pad" id="ride">
+      <div class="drum-pad-inner"></div>
+      <h3>Ride</h3>
+    </div>
+    <div class="drum-pad" id="snare">
+      <div class="drum-pad-inner"></div>
+      <h3>Snare</h3>
+    </div>
+    <div class="drum-pad" id="tink">
+      <div class="drum-pad-inner"></div>
+      <h3>Tink</h3>
+    </div>
+    <div class="drum-pad" id="tom">
+      <div class="drum-pad-inner"></div>
+      <h3>Tom</h3>
+    </div>
+
+    <div class="drum-pic">
+      <img
+        src="https://media.istockphoto.com/id/172302927/photo/take-it-from-the-top.jpg?s=612x612&w=0&k=20&c=A0PmZMevE_k50I9fm1ePD7IgJEhJzXktmoJnG4cohTA="
+        width="300px"
+        height="300px"
+      />
+    </div>
     <script src="./app.js"></script>
-</body>
+  </body>
 </html>
